updated model and prng descriptions

--- a/WorkSpace/Paper/Paper.ipynb
+++ b/WorkSpace/Paper/Paper.ipynb
@@ -173,6 +173,37 @@
     "You might ask: won't different seed generators introduce flaws or bias in the experiment? Well, it depends on what you are testing. In our case, we are strictly testing the \"complexity\" of the generator itself, so supplying a seed that is not blatantly predictable but also not unpredictable was sufficient. Our goal was to allow the characteristics of the generator to be exposed, for we were cracking the \"complexity\" of the generation algorithm, not the complexity of an arbitrary seed.\n",
     "\n",
     "\\subsection{PRNG Implementations}\n",
+    "For the experiment, we chose five PRNG methods by year of invention. We attempted to choose PRNG methods that displayed popularity in the world of pseudo random number generation while making sure the year of invention was reasonably distributed among the group. Choosing five PRNGs allowed us to focus on implementations, while leaving future research opportunities open for working with other PRNGs that we did not cover.\n",
+    "\n",
+    "Chosen PRNGs:\n",
+    "\\begin{itemize}\n",
+    "  \\item Middle-square method (1946)\n",
+    "  \\item Linear congruential generator (1958)\n",
+    "  \\item Lagged Fibonacci (1965)\n",
+    "  \\item Park-Miller (1988)\n",
+    "  \\item Mersenne Twister (1998)\n",
+    "\\end{itemize}\n",
+    "\n",
+    "The call definition of any given PRNG function is as follows:\n",
+    "\\begin{lstlisting}\n",
+    "PRNGfunc(seed, n) \n",
+    "\\end{lstlisting}\n",
+    "This is so we can experimentally automate the calling of each PRNG without getting too complex.\n",
+    "The given PRNG function should return a list of n generated numbers using the generation method.\n",
+    "All other parameters outside of the seed and n are default values.\n",
+    "\n",
+    "For example, if the call was PRNG(seed, 10),\n",
+    "it might return something like\n",
+    "[3,5,10,1,31,17,2,4,6,7]\n",
+    "\n",
+    "We control parsing the n-length list and handling seeds externally. \n",
+    "This plays logically with separation of concerns for our usecase.\n",
+    "\n",
+    "While python generators can be useful iterating over previously generated iterables,\n",
+    "we did not want to clutter our experimental execution code, so we stuck to a classical\n",
+    "internal handling of all iterations.\n",
+    "\n",
+    "Below are short descriptions of each PRNG and any implementation notes made during the developement process.\n",
     "Middle Square:\n",
     "Description:\n",
     "...\n",
@@ -250,11 +281,13 @@
     "\n",
     "The following is a vastly informal mathematical representation of our experimental model, using a loose coupling of TLA+ notation and some set-builder theory. Further explanations and graphics will follow to aide in interpretation of the design of the experimental setup.\n",
     "\n",
+    "\\begin{displayquote}\n",
     "Let $n$ be any arbitrary natural number such that $\\{n \\in \\mathbb{N}\\}$.\n",
     "Let $E$ represent the experiment definition.\n",
     "Let $seed$ be a function such that when called will return a seed.\n",
     "Given $k$ and $S_n$, let $prng$ be a function such that when called will return a set of pseudo random numbers,\n",
     "dervied from an initial seed $S_n$ and a given algorithm, where the length of the set is $k$.\n",
+    "\\end{displayquote}\n",
     "\n",
     "\\begin{figure}[H]\n",
     "\\centering\n",
@@ -270,12 +303,6 @@
     "\n",
     "For a simplified graphical representation of the latter description, please reference the predictive model in Figure ~\\ref{fig:Predictive Model}, the simplified experimental model in Figure ~\\ref{fig:Simplified Experimental Model} , and the granular view of the experimental model in Figure ~\\ref{fig:Granular Experimental Model}.\n",
     "\n",
-    "\\begin{figure}[H]\n",
-    "\\centering\n",
-    "\\includegraphics[width=1\\linewidth]{./Images/PredictiveModel.png}\n",
-    "\\caption{Predictive Model}\n",
-    "\\label{fig:Predictive Model}\n",
-    "\\end{figure}\n",
     "\n",
     "\\begin{figure}[H]\n",
     "\\centering\n",
@@ -284,12 +311,28 @@
     "\\label{fig:Simplified Experimental Model}\n",
     "\\end{figure}\n",
     "\n",
+    "Referencing Figure ~\\ref{fig:Simplified Experimental Model}, which is a visualization of what a 1-dimensional architecture of our experiment might entail, the predictive neural net as visualized in Figure ~\\ref{fig:Predictive Model} is fed outputs of a specific PRNG, which will attempt to predict an kth value, based on previous k-1 values in a particular set of input data, where each set is generated based off of a single unique seed. After being trained on, ideally thousands of sets, the predictive network will form a better stochastic \"understanding\" of how the PRNG works underneath, thus being able to more accurately predict numbers generated from that PRNG in the future (i.e.,a supervised regression model). The backpropagation will flow through the predictive network to acheive the adversarial nature of a traditional GAN setup, but in reality, we won't be using a generative network, but rather a PRNG algorithm, so the generative part of our setup won't be defensive.\n",
+    "\n",
+    "\n",
+    "\\begin{figure}[H]\n",
+    "\\centering\n",
+    "\\includegraphics[width=1\\linewidth]{./Images/PredictiveModel.png}\n",
+    "\\caption{Predictive Model}\n",
+    "\\label{fig:Predictive Model}\n",
+    "\\end{figure}\n",
+    "\n",
+    "Referencing Figure ~\\ref{fig:Predictive Model}, which is a visualization of the layer stack we used for the predictive network in each trial of the experiment, it \"consists of four stacked convolutional layers, each with 4 filters, kernel size 2, and stride 1, followed by a max pooling layer and two FCFFlayers with 4 and 1 units, respectively. The stack of convolutional layers allow the network to discover complex patterns in the input.\" [https://arxiv.org/pdf/1810.00378.pdf] Explain here how/why we used that research's dicriminator model in our experiment exactly, except we implemented Relus instead of leaky-relus. Talk about the input xdata and ydata shape and reference the granular model Figure ~\\ref{fig:Granular Experimental Model} for detail on how these data are aggregated.\n",
+    "\n",
+    "\n",
+    "\n",
     "\\begin{figure}[H]\n",
     "\\centering\n",
     "\\includegraphics[width=1\\linewidth]{./Images/GranularModel.png}\n",
     "\\caption{Granular Experimental Model}\n",
     "\\label{fig:Granular Experimental Model}\n",
     "\\end{figure}\n",
+    "\n",
+    "Talk generally about the data aggregation process, just walk through it.\n",
     "\n",
     "\\subsection{Experimental Execution}\n",
     "Highlight configuration parameters used to execute the experiment.\n",
