finished most of methods, namely prng descriptions and fixed author formatting to correctly represent ranking as per the template

--- a/WorkSpace/Paper/Paper.ipynb
+++ b/WorkSpace/Paper/Paper.ipynb
@@ -43,34 +43,34 @@
     "\n",
     "\n",
     "\\author{\n",
-    "\\IEEEauthorblockN{Najib Ali}\n",
+    "\\IEEEauthorblockN{1\\textsuperscript{st} Spencer Arnold}\n",
     "\\IEEEauthorblockA{\\textit{Department of Computer Science}\\\\\n",
     "\\textit{Middle Tennessee State University}\\\\\n",
     "Murfreesboro, Tennessee \\\\\n",
     "email address}\\\\[0.4cm]  %<------- Extra vertical space\n",
-    "\\IEEEauthorblockN{Matthew Hawks}\n",
+    "\\IEEEauthorblockN{4\\textsuperscript{th} Matthew Hawks}\n",
     "\\IEEEauthorblockA{\\textit{Department of Computer Science}\\\\\n",
     "\\textit{Middle Tennessee State University}\\\\\n",
     "Murfreesboro, Tennessee \\\\\n",
     "email address}\n",
     "\\and\n",
-    "\\IEEEauthorblockN{Jacob Anderson}\n",
+    "\\IEEEauthorblockN{2\\textsuperscript{nd} Najib Ali}\n",
     "\\IEEEauthorblockA{\\textit{Department of Computer Science}\\\\\n",
     "\\textit{Middle Tennessee State University}\\\\\n",
     "Murfreesboro, Tennessee \\\\\n",
     "email address}\\\\[0.4cm]  %<------- Extra vertical space\n",
-    "\\IEEEauthorblockN{Ryan Hines}\n",
+    "\\IEEEauthorblockN{5\\textsuperscript{th} Ryan Hines}\n",
     "\\IEEEauthorblockA{\\textit{Department of Computer Science}\\\\\n",
     "\\textit{Middle Tennessee State University}\\\\\n",
     "Murfreesboro, Tennessee \\\\\n",
     "email address}\n",
     "\\and\n",
-    "\\IEEEauthorblockN{Spencer Arnold}\n",
+    "\\IEEEauthorblockN{3\\textsuperscript{rd} Jacob Anderson}\n",
     "\\IEEEauthorblockA{\\textit{Department of Computer Science}\\\\\n",
     "\\textit{Middle Tennessee State University}\\\\\n",
     "Murfreesboro, Tennessee \\\\\n",
     "email address}\\\\[0.4cm]  %<------- Extra vertical space\n",
-    "\\IEEEauthorblockN{Tae Kweon}\n",
+    "\\IEEEauthorblockN{6\\textsuperscript{th} Tae Kweon}\n",
     "\\IEEEauthorblockA{\\textit{Department of Computer Science}\\\\\n",
     "\\textit{Middle Tennessee State University}\\\\\n",
     "Murfreesboro, Tennessee \\\\\n",
@@ -203,78 +203,72 @@
     "we did not want to clutter our experimental execution code, so we stuck to a classical\n",
     "internal handling of all iterations.\n",
     "\n",
-    "Below are short descriptions of each PRNG and any implementation notes made during the developement process.\n",
-    "Middle Square:\n",
-    "Description:\n",
-    "...\n",
-    "Notes:\n",
-    "A note on weakness: For a generator of n-digit numbers, the period can be no longer than 8n. If the middle n digits are all zeroes, \n",
-    "the generator then outputs zeroes forever. If the first half of a number in the sequence is zeroes, the subsequent\n",
-    "numbers will be decreasing to zero. While these runs of zero are easy to detect, they occur too frequently for this\n",
-    "method to be of practical use. The middle-squared method can also get stuck on a number other than zero.\n",
+    "Below are short descriptions and non-inclusive general notes of each PRNG and any implementation notes made during the developement process.\n",
     "\n",
-    "An already seen list is NOT included in the original middle square method and will not be used.\n",
     "\n",
-    "Linear Congruential:\n",
-    "Description:\n",
-    "...\n",
+    "\\noindent\\textbf{Middle Square}:\n",
+    "\\begin{itemize}\n",
+    "    \\item \"To generate a sequence of n-digit pseudorandom numbers, an n-digit starting value is created and squared, producing a 2n-digit number. If the result has fewer than 2n digits, leading zeroes are added to compensate. The middle n digits of the result would be the next number in the sequence, and returned as the result. This process is then repeated to generate more numbers.\" \\cite{MiddleSquare}\n",
+    "\\end{itemize}\n",
     "Notes:\n",
-    "The generator is not sensitive to the choice of c, \n",
+    "\\begin{itemize}\n",
+    "    \\item Generally the value of the seed has to be even, but can be padded with leading zeros.\n",
+    "    \\item If the middle n digits are all zeroes, the generator then outputs zeroes indefinitely. If the first half of a number in the sequence is zeroes, the subsequent numbers eventually converges to zero.\n",
+    "\\end{itemize}\n",
+    "\n",
+    "\n",
+    "\\noindent\\textbf{Linear Congruential}:\n",
+    "\\begin{itemize}\n",
+    "    \\item A linear congruential generator is a PRNG that represents an \"additive  congruential  method\", with foundations in improving upon \"unsatisfactory\" tests with entropy in fibonacci sequences. \\cite{10.1145/321008.321019}\n",
+    "\\end{itemize}\n",
+    "Notes:\n",
+    "\\begin{itemize}\n",
+    "    \\item The generator is not sensitive to the choice of c, \n",
     "as long as it is relatively prime to the modulus \n",
     "(e.g. if m is a power of 2, then c must be odd), \n",
     "so the value c=1 is commonly chosen.\n",
-    "\n",
-    "If c = 0, the generator is often called a multiplicative\n",
-    "congruential generator (MCG), or Lehmer RNG. If c ≠ 0, the\n",
+    "    \\item If c = 0, the generator is often called a multiplicative\n",
+    "congruential generator (MCG), or Lehmer RNG (which is used for our implementation). If c ≠ 0, the\n",
     "method is called a mixed congruential generator.\n",
+    "    \\item Parameters were chosen based on $2^32$ numbers in table 2 of the article \"Tables of linear congruential generators of different sizes and good lattice structure.\" \\cite{LEcuyer1999TablesOL}\n",
+    "\\end{itemize}\n",
     "\n",
-    "Parameters were chosen based on $2^32$ in table 2 of \n",
-    "\\url{https://citeseerx.ist.psu.edu/viewdoc/download;jsessionid=BBA0C7ED3ADAB606642BB8D939774B4F?doi=10.1.1.34.1024&rep=rep1&type=pdf}\n",
     "\n",
-    "Lagged Fibonacci:\n",
-    "Description:\n",
-    "...\n",
+    "\\noindent\\textbf{Lagged Fibonacci}:\n",
+    "\\begin{itemize}\n",
+    "    \\item The Lagged Fibonacci PRNG is a generalization of the Fibonacci Sequence \\cite{lucas1891calcul}, where the sequence is generated based off a seed and the sum of the last two values is the PRN (which is also serves as the next seed).\n",
+    "\\end{itemize}\n",
     "Notes:\n",
-    "This is two tap, not three tap...\n",
-    "It's a \"lagged\" generator, because \"j\" and \"k\" lag behind the generated pseudorandom value. \n",
-    "Also, this is called a \"two-tap\" generator, in that you are using 2 values in the sequence \n",
-    "to generate the pseudorandom number. However, a two-tap generator has some problems with \n",
-    "randomness tests, such as the Birthday Spacings. Apparently, creating a \"three-tap\" generator\n",
+    "\\begin{itemize}\n",
+    "    \\item It is refered to a \"lagged\" generator, because \"j\" and \"k\" lag behind the generated pseudorandom value. \n",
+    "    \\item Our implementation is called a \"two-tap\" generator, in that you are using 2 values in the sequence \n",
+    "to generate the pseudorandom number. However, note that a two-tap generator has some problems with \n",
+    "randomness tests, such as the Birthday Spacings. Creating a \"three-tap\" generator could\n",
     "addresses this problem.\n",
+    "\\end{itemize}\n",
     "\n",
-    "Park Miller:\n",
-    "Description:\n",
-    "...\n",
+    "\n",
+    "\\noindent\\textbf{Park Miller}:\n",
+    "\\begin{itemize}\n",
+    "    \\item Park Miller (also known as Lehmer) can be viewed as a particular case of the Lemher PRNG, which is a particular case of the linear congruential PRNG, where c=0 and particular parameters are specified.\n",
+    "\\end{itemize}\n",
     "Notes:\n",
-    "The Lehmer generator is an lcg. Park Miller is a specific lcg.\n",
-    "    \n",
-    "The Lehmer random number generator (named after D. H. Lehmer), \n",
-    "sometimes also referred to as the Park–Miller random number generator\n",
-    "(after Stephen K. Park and Keith W. Miller), is a type of linear congruential generator (LCG).\n",
+    "\\begin{itemize}\n",
+    "    \\item \"In 1988, Park and Miller \\cite{10.1145/63039.63042}, suggested a Lehmer RNG with particular parameters m = 231 − 1 = 2,147,483,647 (a Mersenne prime M31) and a = 75 = 16,807 (a primitive root modulo M31), now known as MINSTD.\" \\cite{ParkMiller}\n",
+    "\\end{itemize}\n",
     "\n",
-    "Park miller generator, because they essentially the same.\n",
-    "Park-miller request the use of certain modulos.\n",
-    "Lehmer is an lcg where c = 0...\n",
-    "If c = 0, the generator is often called a multiplicative congruential generator (MCG),\n",
-    "or Lehmer RNG. If c ≠ 0, the method is called a mixed congruential generator.\n",
     "\n",
-    "While the Lehmer RNG can be viewed as a particular case of the linear congruential generator\n",
-    "with c=0, it is a special case that implies certain restrictions and properties.\n",
-    "In particular, for the Lehmer RNG, the initial seed must be coprime to the modulus m that is\n",
-    "not required for LCGs in general. \n",
-    "\n",
-    "The choice of the modulus m and the multiplier a is also more restrictive for the Lehmer RNG.\n",
-    "In contrast to LCG, the maximum period of the Lehmer RNG equals m−1 and it is such when m is \n",
-    "prime and a is a primitive root modulo m. \n",
-    "\n",
-    "Mersenne Twister:\n",
-    "Description:\n",
-    "...\n",
+    "\\noindent\\textbf{Mersenne Twister}:\n",
+    "\\begin{itemize}\n",
+    "    \\item \"The Mersenne Twister algorithm is based on a matrix linear recurrence over a finite binary field\" \\cite{10.1145/146382.146383}\n",
+    "\\end{itemize}\n",
     "Notes:\n",
-    "Closely related with LFSRs. In its MT19937 implementation is probably the most commonly used modern PRNG. \n",
-    "Default generator in the Python language starting from version 2.3. \n",
+    "\\begin{itemize}\n",
+    "    \\item This PRNG is similar to a common LFSR. Its MT19937 implementation is probably the most commonly used modern PRNG. \n",
+    "    \\item It is also the default generator in the Python language starting from version 2.3. \n",
+    "    \\item For our implementation, we used numpy's version of the Mersenne Twister.\n",
+    "\\end{itemize}\n",
     "\n",
-    "We used numpy's version of the Mersenne Twister.\n",
     "\n",
     "\\subsection{Experimental Setup}\n",
     "\n",
@@ -321,7 +315,7 @@
     "\\label{fig:Predictive Model}\n",
     "\\end{figure}\n",
     "\n",
-    "Referencing Figure ~\\ref{fig:Predictive Model}, which is a visualization of the layer stack we used for the predictive network in each trial of the experiment, it \"consists of four stacked convolutional layers, each with 4 filters, kernel size 2, and stride 1, followed by a max pooling layer and two FCFFlayers with 4 and 1 units, respectively. The stack of convolutional layers allow the network to discover complex patterns in the input.\" [https://arxiv.org/pdf/1810.00378.pdf] Explain here how/why we used that research's dicriminator model in our experiment exactly, except we implemented Relus instead of leaky-relus. Talk about the input xdata and ydata shape and reference the granular model Figure ~\\ref{fig:Granular Experimental Model} for detail on how these data are aggregated.\n",
+    "Referencing Figure ~\\ref{fig:Predictive Model}, which is a visualization of the layer stack we used for the predictive network in each trial of the experiment, it \"consists of four stacked convolutional layers, each with 4 filters, kernel size 2, and stride 1, followed by a max pooling layer and two FCFFlayers with 4 and 1 units, respectively. The stack of convolutional layers allow the network to discover complex patterns in the input.\" \\cite{debernardi2018pseudo} Explain here how/why we used that research's dicriminator model in our experiment exactly, except we implemented Relus instead of leaky-relus. Talk about the input xdata and ydata shape and reference the granular model Figure ~\\ref{fig:Granular Experimental Model} for detail on how these data are aggregated.\n",
     "\n",
     "\n",
     "\n",
