--- a/WorkSpace/Paper/References.bib
+++ b/WorkSpace/Paper/References.bib
@@ -16,33 +16,111 @@
  url       = "https://stackoverflow.com/a/29368771"
 }
 
-@unpublished{b4,
-    author = "K. Elissa",
-    title = "Title of paper if known"
-}
-http://proceedings.mlr.press/v9/glorot10a/glorot10a.pdf
-
-@article{b5,
-    author = "R. Nicole",
-    title = "Title of paper with only first word capitalized",
-    journal = "J. Name Stand. Abbrev."
+@inproceedings{debernardi2018pseudo,
+  title={Pseudo-Random Number Generation using Generative Adversarial Networks},
+  author={De Bernardi, Marcello and Khouzani, MHR and Malacaria, Pasquale},
+  booktitle={Joint European Conference on Machine Learning and Knowledge Discovery in Databases},
+  pages={191--200},
+  year={2018},
+  organization={Springer}
 }
 
-@article{b6,
-  author = "L\^e D{\~u}ng Trang and Bernard Teissier",
-   title = "Vari\'et\'es polaires locales et classes de {C}hern des
-            vari\'et\'es singuli\`eres",
- journal = "Ann. of Math.",
-  volume = 114,
-    year = 1981,
-   pages = "457--491"
-}   
-
-@article{b7,
-  author = "Dirk Siersma and Mihai Ti{\u b}ar",
-   title = "Singularities at infinity and their vanishing cycles",
- journal = "Duke Math. J.",
-  volume = 80,
-    year = 1995,
-   pages = "771--783"
+@article{10.1145/146382.146383,
+author = {Matsumoto, Makoto and Kurita, Yoshiharu},
+title = {Twisted GFSR Generators},
+year = {1992},
+issue_date = {July 1992},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {2},
+number = {3},
+issn = {1049-3301},
+url = {https://doi.org/10.1145/146382.146383},
+doi = {10.1145/146382.146383},
+journal = {ACM Trans. Model. Comput. Simul.},
+month = jul,
+pages = {179–194},
+numpages = {16},
+keywords = {GF(2m), m-sequences, TLP-sequences, matrix linear congruential generators, generalized feedback shift registers}
 }
+
+  
+
+@article{10.1145/63039.63042,
+author = {Park, S. K. and Miller, K. W.},
+title = {Random Number Generators: Good Ones Are Hard to Find},
+year = {1988},
+issue_date = {October 1988},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {31},
+number = {10},
+issn = {0001-0782},
+url = {https://doi.org/10.1145/63039.63042},
+doi = {10.1145/63039.63042},
+journal = {Commun. ACM},
+month = oct,
+pages = {1192–1201},
+numpages = {10}
+}
+
+  
+
+@misc{ParkMiller,
+    author = "{Wikipedia contributors}",
+    title = "Lehmer random number generator --- {Wikipedia}{,} The Free Encyclopedia",
+    year = "2020",
+    howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Lehmer_random_number_generator&oldid=950526808}",
+    note = "[Online; accessed 
+
+24-April-2020
+]"
+  }
+
+@article{LEcuyer1999TablesOL,
+  title={Tables of linear congruential generators of different sizes and good lattice structure},
+  author={Pierre L'Ecuyer},
+  journal={Math. Comput.},
+  year={1999},
+  volume={68},
+  pages={249-260}
+}
+
+@article{10.1145/321008.321019,
+author = {Rotenberg, A.},
+title = {A New Pseudo-Random Number Generator},
+year = {1960},
+issue_date = {January 1960},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {7},
+number = {1},
+issn = {0004-5411},
+url = {https://doi.org/10.1145/321008.321019},
+doi = {10.1145/321008.321019},
+journal = {J. ACM},
+month = jan,
+pages = {75–77},
+numpages = {3}
+}
+
+@book{lucas1891calcul,
+  title={Le calcul des nombres entiers. Le calcul des nombres rationnels. La divisibilit{\'e} arithm{\'e}tique},
+  author={Lucas, {\'E}.},
+  series={Th{\'e}orie des nombres},
+  url={https://books.google.com/books?id=\_hsPAAAAIAAJ},
+  year={1891},
+  publisher={Gauthier-Villars}
+}
+
+
+@misc{MiddleSquare,
+    author = "{Wikipedia contributors}",
+    title = "Middle-square method --- {Wikipedia}{,} The Free Encyclopedia",
+    year = "2020",
+    url = "https://en.wikipedia.org/w/index.php?title=Middle-square_method&oldid=951418817",
+    note = "[Online; accessed 
+
+24-April-2020
+]"
+  }
