--- a/WorkSpace/Paper/Paper.tex
+++ b/WorkSpace/Paper/Paper.tex
@@ -28,34 +28,34 @@
 
 
 \author{
-\IEEEauthorblockN{Najib Ali}
+\IEEEauthorblockN{1\textsuperscript{st} Spencer Arnold}
 \IEEEauthorblockA{\textit{Department of Computer Science}\\
 \textit{Middle Tennessee State University}\\
 Murfreesboro, Tennessee \\
 email address}\\[0.4cm]  %<------- Extra vertical space
-\IEEEauthorblockN{Matthew Hawks}
+\IEEEauthorblockN{4\textsuperscript{th} Matthew Hawks}
 \IEEEauthorblockA{\textit{Department of Computer Science}\\
 \textit{Middle Tennessee State University}\\
 Murfreesboro, Tennessee \\
 email address}
 \and
-\IEEEauthorblockN{Jacob Anderson}
+\IEEEauthorblockN{2\textsuperscript{nd} Najib Ali}
 \IEEEauthorblockA{\textit{Department of Computer Science}\\
 \textit{Middle Tennessee State University}\\
 Murfreesboro, Tennessee \\
 email address}\\[0.4cm]  %<------- Extra vertical space
-\IEEEauthorblockN{Ryan Hines}
+\IEEEauthorblockN{5\textsuperscript{th} Ryan Hines}
 \IEEEauthorblockA{\textit{Department of Computer Science}\\
 \textit{Middle Tennessee State University}\\
 Murfreesboro, Tennessee \\
 email address}
 \and
-\IEEEauthorblockN{Spencer Arnold}
+\IEEEauthorblockN{3\textsuperscript{rd} Jacob Anderson}
 \IEEEauthorblockA{\textit{Department of Computer Science}\\
 \textit{Middle Tennessee State University}\\
 Murfreesboro, Tennessee \\
 email address}\\[0.4cm]  %<------- Extra vertical space
-\IEEEauthorblockN{Tae Kweon}
+\IEEEauthorblockN{6\textsuperscript{th} Tae Kweon}
 \IEEEauthorblockA{\textit{Department of Computer Science}\\
 \textit{Middle Tennessee State University}\\
 Murfreesboro, Tennessee \\
@@ -166,78 +166,72 @@ While python generators can be useful iterating over previously generated iterab
 we did not want to clutter our experimental execution code, so we stuck to a classical
 internal handling of all iterations.
 
-Below are short descriptions of each PRNG and any implementation notes made during the developement process.
-Middle Square:
-Description:
-...
-Notes:
-A note on weakness: For a generator of n-digit numbers, the period can be no longer than 8n. If the middle n digits are all zeroes, 
-the generator then outputs zeroes forever. If the first half of a number in the sequence is zeroes, the subsequent
-numbers will be decreasing to zero. While these runs of zero are easy to detect, they occur too frequently for this
-method to be of practical use. The middle-squared method can also get stuck on a number other than zero.
+Below are short descriptions and non-inclusive general notes of each PRNG and any implementation notes made during the developement process.
 
-An already seen list is NOT included in the original middle square method and will not be used.
 
-Linear Congruential:
-Description:
-...
+\noindent\textbf{Middle Square}:
+\begin{itemize}
+    \item "To generate a sequence of n-digit pseudorandom numbers, an n-digit starting value is created and squared, producing a 2n-digit number. If the result has fewer than 2n digits, leading zeroes are added to compensate. The middle n digits of the result would be the next number in the sequence, and returned as the result. This process is then repeated to generate more numbers." \cite{MiddleSquare}
+\end{itemize}
 Notes:
-The generator is not sensitive to the choice of c, 
+\begin{itemize}
+    \item Generally the value of the seed has to be even, but can be padded with leading zeros.
+    \item If the middle n digits are all zeroes, the generator then outputs zeroes indefinitely. If the first half of a number in the sequence is zeroes, the subsequent numbers eventually converges to zero.
+\end{itemize}
+
+
+\noindent\textbf{Linear Congruential}:
+\begin{itemize}
+    \item A linear congruential generator is a PRNG that represents an "additive  congruential  method", with foundations in improving upon "unsatisfactory" tests with entropy in fibonacci sequences. \cite{10.1145/321008.321019}
+\end{itemize}
+Notes:
+\begin{itemize}
+    \item The generator is not sensitive to the choice of c, 
 as long as it is relatively prime to the modulus 
 (e.g. if m is a power of 2, then c must be odd), 
 so the value c=1 is commonly chosen.
-
-If c = 0, the generator is often called a multiplicative
-congruential generator (MCG), or Lehmer RNG. If c ≠ 0, the
+    \item If c = 0, the generator is often called a multiplicative
+congruential generator (MCG), or Lehmer RNG (which is used for our implementation). If c ≠ 0, the
 method is called a mixed congruential generator.
+    \item Parameters were chosen based on $2^32$ numbers in table 2 of the article "Tables of linear congruential generators of different sizes and good lattice structure." \cite{LEcuyer1999TablesOL}
+\end{itemize}
 
-Parameters were chosen based on $2^32$ in table 2 of 
-\url{https://citeseerx.ist.psu.edu/viewdoc/download;jsessionid=BBA0C7ED3ADAB606642BB8D939774B4F?doi=10.1.1.34.1024&rep=rep1&type=pdf}
 
-Lagged Fibonacci:
-Description:
-...
+\noindent\textbf{Lagged Fibonacci}:
+\begin{itemize}
+    \item The Lagged Fibonacci PRNG is a generalization of the Fibonacci Sequence \cite{lucas1891calcul}, where the sequence is generated based off a seed and the sum of the last two values is the PRN (which is also serves as the next seed).
+\end{itemize}
 Notes:
-This is two tap, not three tap...
-It's a "lagged" generator, because "j" and "k" lag behind the generated pseudorandom value. 
-Also, this is called a "two-tap" generator, in that you are using 2 values in the sequence 
-to generate the pseudorandom number. However, a two-tap generator has some problems with 
-randomness tests, such as the Birthday Spacings. Apparently, creating a "three-tap" generator
+\begin{itemize}
+    \item It is refered to a "lagged" generator, because "j" and "k" lag behind the generated pseudorandom value. 
+    \item Our implementation is called a "two-tap" generator, in that you are using 2 values in the sequence 
+to generate the pseudorandom number. However, note that a two-tap generator has some problems with 
+randomness tests, such as the Birthday Spacings. Creating a "three-tap" generator could
 addresses this problem.
+\end{itemize}
 
-Park Miller:
-Description:
-...
+
+\noindent\textbf{Park Miller}:
+\begin{itemize}
+    \item Park Miller (also known as Lehmer) can be viewed as a particular case of the Lemher PRNG, which is a particular case of the linear congruential PRNG, where c=0 and particular parameters are specified.
+\end{itemize}
 Notes:
-The Lehmer generator is an lcg. Park Miller is a specific lcg.
-    
-The Lehmer random number generator (named after D. H. Lehmer), 
-sometimes also referred to as the Park–Miller random number generator
-(after Stephen K. Park and Keith W. Miller), is a type of linear congruential generator (LCG).
+\begin{itemize}
+    \item "In 1988, Park and Miller \cite{10.1145/63039.63042}, suggested a Lehmer RNG with particular parameters m = 231 − 1 = 2,147,483,647 (a Mersenne prime M31) and a = 75 = 16,807 (a primitive root modulo M31), now known as MINSTD." \cite{ParkMiller}
+\end{itemize}
 
-Park miller generator, because they essentially the same.
-Park-miller request the use of certain modulos.
-Lehmer is an lcg where c = 0...
-If c = 0, the generator is often called a multiplicative congruential generator (MCG),
-or Lehmer RNG. If c ≠ 0, the method is called a mixed congruential generator.
 
-While the Lehmer RNG can be viewed as a particular case of the linear congruential generator
-with c=0, it is a special case that implies certain restrictions and properties.
-In particular, for the Lehmer RNG, the initial seed must be coprime to the modulus m that is
-not required for LCGs in general. 
-
-The choice of the modulus m and the multiplier a is also more restrictive for the Lehmer RNG.
-In contrast to LCG, the maximum period of the Lehmer RNG equals m−1 and it is such when m is 
-prime and a is a primitive root modulo m. 
-
-Mersenne Twister:
-Description:
-...
+\noindent\textbf{Mersenne Twister}:
+\begin{itemize}
+    \item "The Mersenne Twister algorithm is based on a matrix linear recurrence over a finite binary field" \cite{10.1145/146382.146383}
+\end{itemize}
 Notes:
-Closely related with LFSRs. In its MT19937 implementation is probably the most commonly used modern PRNG. 
-Default generator in the Python language starting from version 2.3. 
+\begin{itemize}
+    \item This PRNG is similar to a common LFSR. Its MT19937 implementation is probably the most commonly used modern PRNG. 
+    \item It is also the default generator in the Python language starting from version 2.3. 
+    \item For our implementation, we used numpy's version of the Mersenne Twister.
+\end{itemize}
 
-We used numpy's version of the Mersenne Twister.
 
 \subsection{Experimental Setup}
 
@@ -284,7 +278,7 @@ Referencing Figure ~\ref{fig:Simplified Experimental Model}, which is a visualiz
 \label{fig:Predictive Model}
 \end{figure}
 
-Referencing Figure ~\ref{fig:Predictive Model}, which is a visualization of the layer stack we used for the predictive network in each trial of the experiment, it "consists of four stacked convolutional layers, each with 4 filters, kernel size 2, and stride 1, followed by a max pooling layer and two FCFFlayers with 4 and 1 units, respectively. The stack of convolutional layers allow the network to discover complex patterns in the input." [https://arxiv.org/pdf/1810.00378.pdf] Explain here how/why we used that research's dicriminator model in our experiment exactly, except we implemented Relus instead of leaky-relus. Talk about the input xdata and ydata shape and reference the granular model Figure ~\ref{fig:Granular Experimental Model} for detail on how these data are aggregated.
+Referencing Figure ~\ref{fig:Predictive Model}, which is a visualization of the layer stack we used for the predictive network in each trial of the experiment, it "consists of four stacked convolutional layers, each with 4 filters, kernel size 2, and stride 1, followed by a max pooling layer and two FCFFlayers with 4 and 1 units, respectively. The stack of convolutional layers allow the network to discover complex patterns in the input." \cite{debernardi2018pseudo} Explain here how/why we used that research's dicriminator model in our experiment exactly, except we implemented Relus instead of leaky-relus. Talk about the input xdata and ydata shape and reference the granular model Figure ~\ref{fig:Granular Experimental Model} for detail on how these data are aggregated.
 
 
 
